2007-01-20  Per Bothner  <per@bothner.com>

	* XML.scm (commmet, processing-instruction): New constants.

2007-01-04  Per Bothner  <per@bothner.com>

	* gui.scm (uri): Use Path's openInputStream method.

2006-12-20  Per Bothner  <per@bothner.com>

	* Makefile.am: Simplify - we use '$JAVA kawa.repl' rather than $KAWA1.

2006-12-05  Per Bothner  <per@bothner.com>

	* printf.scm: Replace slib:error by error.
	Relace stdio:fprintf by fprintf.
	Replace slib:tab and slib:form-feed by appropriate character literals.

	* swing.scm (polygon): Take doubleValue of real-part results so
	JAVA6 doesn't complin about ambiguous method.  Add type specifiers.

2006-08-11  Per Bothner  <per@bothner.com>

	* testing.scm (%test-comp1body):  Remove inccorect setting of
	expected-value property - to R5RS standard function exp.

	* testing.scm (test-assert): Fix thinko expr -> test-expression.
	
2006-06-06  Per Bothner  <per@bothner.com>

	* testing.scm: Rename non-exported names to consistently start with %.
	Add list of exported names, which in Kawa becomes a module-export.
	(%test-any-specifier-matches): Don't short-curcuit evaluation.
	(test-runner-on-bad-end-name, test-runner-on-bad-end-name!): New
	test-runner method.
	(test-on-bad-end-name-simple): Default implementation.
	(%test-format-line): New helper.
	(%test-end): Various changes, including call new on-bad-end-name
	call-back, and use %test-format-line.
	(test-on-group-end-simple): Emit group name.

2006-05-25  Per Bothner  <per@bothner.com>

	* srfi37.scm: Add needed require.

	* swing.scm (modle-export): Remove removed frame function.

2006-05-11  Per Bothner  <per@bothner.com>

	* genwrite.scm (generic-write): Remove special handling of atomic types.

2006-05-02  Per Bothner  <per@bothner.com>

	* testing.scm: Rename internal names to consistently start with '%'.
	(test-error%x): Remove macro.
	(%test-error): Re-arrange cond-expand branches.

2006-03-15  Per Bothner  <per@bothner.com>
