@@ -1,3 +1,10 @@
+2007-02-14  Per Bothner  <per@bothner.com>
+
+	* testing.scm (test-runner-reset): Initialize test-result-alist!.
+	This is needed in the case of zero tests.
+
+	* testing.scm (%test-record-define): Fix off-by-one error.
+
 2007-01-20  Per Bothner  <per@bothner.com>
 
 	* XML.scm (commmet, processing-instruction): New constants.
